--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "watch": "nodemon src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-watch": "jest --watch",
+    "test": "jest",
     "start": "node src/server.js"
   },
   "keywords": [],
@@ -18,6 +19,8 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.4.2",
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.3"
   }
 }
