--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "watch": "nodemon src/server.js",
     "test-watch": "jest --watch",
     "test": "jest",
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "cluster": "pm2 start src/server.js -i max"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,8 @@
     "cors": "^2.8.5",
     "csv-parse": "^5.3.4",
     "express": "^4.18.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "pm2": "^5.2.2"
   },
   "devDependencies": {
     "jest": "^29.4.2",
